[package]
name = "rmemo"
version = "0.3.2"
authors = ["k-nasa <htilcs1115@gmail.com>"]
keywords = ["cli"]
repository = "https://github.com/k-nasa/memo_command"
license-file = "LICENSE"
readme = "README.md"
description = "Tools for taking notes fast on the CLI"
edition = "2018"

[dependencies]
dirs = "2.0.1"
toml = "0.5.1"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
clap = "2.33"
colored = "1.8"
termion = "1.5"
dialoguer = "0.4.0"
failure = "0.1.7"
mdbook = "0.3.0"
rocket = "0.4.2"
rocket_contrib = "0.4.1"
Inflector = "0.11.4"
