[package]
name = "rmemo"
version = "0.3.2"
authors = ["k-nasa <htilcs1115@gmail.com>"]
keywords = ["cli"]
repository = "https://github.com/k-nasa/memo_command"
license-file = "LICENSE"
readme = "README.md"
description = "Tools for taking notes fast on the CLI"
edition = "2018"

[dependencies]
dirs = "2.0.2"
toml = "0.5.6"
chrono = "0.4.11"
serde = "1.0.105"
serde_derive = "1.0.116"
clap = "2.33.0"
colored = "1.9.3"
termion = "1.5.5"
dialoguer = "0.5.0"
failure = "0.1.8"
mdbook = "0.3.6"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
Inflector = "0.11.4"
